@@ -40,7 +40,7 @@
  *  - "editorclient,contents,changed", void: reports that editor client's
  *    contents were changed
  *  - "icon,changed", void: frame favicon changed.
- *  - "intent,new", EwkIntentRequest*: reports new intent.
+ *  - "intent,new", Ewk_Intent_Request*: reports new intent.
  *  - "load,committed", void: reports load committed.
  *  - "load,document,finished", void: frame finished loading the document.
  *  - "load,error", const Ewk_Frame_Load_Error*: reports load failed
