@@ -1,3 +1,13 @@
+2012-05-21  Christophe Dumez  <christophe.dumez@intel.com>
+
+        [EFL] Minor style fixes in web intents code are needed
+        https://bugs.webkit.org/show_bug.cgi?id=86986
+
+        Reviewed by Adam Barth.
+
+        * ewk/EWebKit.h: Add new intent headers.
+        * ewk/ewk_frame.h: Add missing underscores to EwkIntentRequest type.
+
 2012-05-20  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>
 
         [EFL] ewk_view navigation_policy_decision() input parameters should be extended
