@@ -1,3 +1,15 @@
+2012-05-21  Christophe Dumez  <christophe.dumez@intel.com>
+
+        [EFL] Minor style fixes in web intents code are needed
+        https://bugs.webkit.org/show_bug.cgi?id=86986
+
+        Reviewed by Adam Barth.
+
+        Fix minor ordering issues in CMake files.
+
+        * CMakeLists.txt:
+        * PlatformEfl.cmake:
+
 2012-05-18  Christophe Dumez  <christophe.dumez@intel.com>
 
         [EFL] Add simple implementation of Web Intents
